#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999916 released.

        * More improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999915 released.

        * Lots of improvements to the Plan Menu facility.

        * New version of Term::Menus paired with this release.


2013-07-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999914 released.

        * New version to accompany Term::Menus documentation
          update.

        * Completed defaults item in admin menu.


2013-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999913 released.

        * New version to accompany Term::Menus fix.


2013-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999912 released.

        * Rusumed long delayed work on Admin Menu.


2013-07-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999911 released.

        * Fixed the last of the known &mirror() bugs.

        * Fixed the last of known bugs when using FullAuto
          with local Virtual Box on Windows.


2013-07-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999910 released.

        * Fixed a bunch of &mirror() bugs.

        * Fixed bugs when using FullAuto with local Virtual
          Box on Windows.


2013-07-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999909 released.
