@@ -19,6 +19,15 @@
 ################################################################
 
 
+2013-08-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999917 released.
+
+        * More improvements to the Plan Menu facility.
+
+        * New version of Term::Menus paired with this release.
+
+
 2013-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999916 released.
